Corrected a bug which caused 2 divs to overlap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,8 +46,17 @@ main{
         align-items: top;
     }
 
-    .carousel{
-        justify-content: center;
+    .carousel-event-image{
+        width:100%;
+        justify-content:center;
+        height:auto;
+    }
+    .membre-BDE{
+        display: flex;
+        flex-direction: row;
+        img{
+            width: 50%;
+        }
     }
 }
 
